<resources>
    <string name="app_name">TAMZ2 project</string>
    <string name="menu_timetable">Timetable</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_lesson_times">Lesson times</string>
    <string name="bt_edit">Edit</string>
    <string name="bt_add">Add</string>
    <string name="bt_delete">Delete</string>
    <string name="lb_end">End</string>
    <string name="lb_start">Start</string>
    <string name="bt_save">Save</string>
    <string name="bt_cancel">Cancel</string>
    <string name="menu_subjects">Subjects</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="lb_name">Name</string>
    <string name="lb_abbreviation">Abbreviation</string>
    <string name="menu_add">Add</string>
    <string name="lb_teacher">Teacher</string>
    <string name="lb_room">Room</string>
    <string name="lb_subject">Subject</string>
    <string name="radio_lesson">Lesson</string>
    <string name="radio_lecture">Lecture</string>
    <string name="lb_type">Type</string>
    <string name="color_header">Header background color</string>
    <string name="color_header_font">Header font color</string>
    <string name="color_header_separator">Header separator color</string>
    <string name="color_cell_empty">Empty cell background color</string>
    <string name="color_cell_lesson">Lesson cell background color</string>
    <string name="color_cell_lesson_font">Lesson cell font color</string>
    <string name="color_cell_lecture">Lecture cell background color</string>
    <string name="color_cell_lecture_font">Lecture cell font color</string>
    <string name="dialog_confirm_positive">Yes</string>
    <string name="dialog_confirm_negative">No</string>
    <string name="title_delete_item">Delete item</string>
    <string name="confirm_delete">Are you sure you want to delete %1$s?</string>
    <string name="confirm_delete_generic">Are you sure you want to delete this item?</string>
    <string name="menu_reset_preferences">Reset preferences</string>
    <string name="title_reset_preferences">Reset preferences</string>
    <string name="confirm_reset_preferences">Are you sure you want to reset your preferences to default values?</string>
</resources>
