<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_padding">

        <TextView
            android:id="@+id/lb_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/label_input_margin_bottom"
            android:labelFor="@+id/spinner_subject"
            android:text="@string/lb_subject"/>

        <Spinner
            android:id="@+id/spinner_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/lb_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/label_input_margin_bottom"
            android:layout_marginTop="@dimen/form_group_margin"
            android:labelFor="@+id/input_teacher"
            android:text="@string/lb_teacher"/>

        <EditText
            android:id="@+id/input_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"/>

        <TextView
            android:id="@+id/lb_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/label_input_margin_bottom"
            android:layout_marginTop="@dimen/form_group_margin"
            android:labelFor="@+id/input_room"
            android:text="@string/lb_room"/>

        <EditText
            android:id="@+id/input_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"/>

        <TextView
            android:id="@+id/lb_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/label_input_margin_bottom"
            android:layout_marginTop="@dimen/form_group_margin"
            android:text="@string/lb_type"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_group_margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_lesson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_lesson"/>

            <RadioButton
                android:id="@+id/radio_lecture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_lecture"/>
        </RadioGroup>

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/form_group_margin"
            android:text=""
            android:textColor="@color/colorRed"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_group_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bt_save"/>

            <Button
                android:id="@+id/bt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bt_cancel"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>